[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-tcg-analytics"
version = "0.1.0"
authors = [
    { name="Stephen May", email="stephendouglasm@gmail.com" },
]
description = "Pokemon TCG Analytics Tool"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]